--- a/index.html
+++ b/index.html
@@ -2,33 +2,50 @@
 <html>
   <head>
     <title>Blog</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/main.css">
+    <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet' type='text/css'>
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/article.js"></script>
+    <script src="js/blog.js"></script>
+    <script src="js/blogArticles.js"></script>
+    <script src="js/util.js"></script>
   </head>
 
   <body>
     <header>
-      <h1>My Blog</h1>
+      <h1 id="blog-title">Darcy's Blog</h1>
       <nav>
-        Articles <br>
-        About<br>
-        <a href="https://github.com/dlambrecht">GitHub</a>
+        <ul class="tab-list">
+          <li class="active"><a class="tab-control" href="#articles">Articles</a></li>
+          <li><a class="tab-control" href="#about">About</a></li>
+          <li><a href="https://github.com/dlambrecht" target="_blank">GitHub</a></li>
+        </ul>
+        <div class="tab-panel active" id="articles"></div>
+        <div class="tab-panel" id="about">My story</div>
+
+        <select id="author">
+          <option id="author-filter">filter by author</option>
+        </select>
+        <select id="category">
+          <option id="category-filter">filter by category</option>
+        </select>
       </nav>
     </header>
-    <main class="blog">
+    <main>
       <article class="article">
         <h1 class="title"></h1>
-        <p class="author"></p>
-        <p class="time"></p>
+        <div class="category"></div>
+        <a class="author" target="_blank"></a>
+        <!-- <p class="authorUrl"></p> -->
+        <div class="time"></div>
         <div class="body"></div>
+        <a href="#" class="read-on">Read On --></a>
       </article>
     </main>
 
     <footer>
     </footer>
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/blogArticles.js"></script>
-    <script src="js/article.js"></script>
-    <script src="js/main.js"></script>
-
   </body>
 </html>
