added nav icons

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <h1 id="blog-title">Darcy's Blog</h1>
     </header>
       <nav>
-          <li class="active"><a href="#tab1">Home</a></li>
-          <li><a class="tab-control" href="#tab2">About</a></li>
-          <li><a class="tab-control" href="https://github.com/dlambrecht" target="_blank">GitHub</a></li>
+          <li id="home" class="active"><a href="#tab1">Home</a></li>
+          <li id="about"><a class="tab-control" href="#tab2">About</a></li>
+          <li id="gitHub"><a class="tab-control" href="https://github.com/dlambrecht" target="_blank">GitHub</a></li>
       </nav>
 
       <section id="articles" class="tab-content active">
