--- a/new-post.html
+++ b/new-post.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/layout.css">
     <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet' type='text/css'>
-    <!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js"></script> -->
-    <!-- <script>hljs.initHighlightingOnLoad();</script> -->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css">
+    <script src="js/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
     <script src="js/handlebars-v4.0.5.js"></script>
@@ -25,13 +25,23 @@
           <h1>{{title}}</h1>
           <div class="category">Category: {{category}}</div>
           <div>By:<a href="{{authorUrl}}" target="_blank">{{author}}</a>published {{daysOld}} days ago</div>
-          <div class="body">{{{body}}}</div>
+          <div class="body">{{{markedBody}}}</div>
           <a href="#" class="read-on">Read On --></a>
         </article>
     </script>
 
   </head>
   <body>
+    <header>
+      <h1 id="blog-title">Darcy's Blog</h1>
+      <p id="create-new">Create New Post </p>
+    </header>
+
+    <nav>
+        <a id="new">New</a> |
+        <a id="about" href="#tab2">About</a>
+    </nav>
+
     <section id="new-post">
       <form id="input-new-article">
         <label>
