added more social media icons for nav, stats html and js created. article and author working

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         </section>
     <footer>
         <a id="gitHub" href="https://github.com/dlambrecht" target="_blank"></a>
+        <a id="facebook" href="https://www.facebook.com/darcy.lambrecht" target="_blank"></a>
+        <a id="twitter" href="https://twitter.com/DarcyLambrecht" target="_blank"></a>
     </footer>
   </body>
 </html>
