--- a/new-post.html
+++ b/new-post.html
@@ -16,7 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
     <script src="js/handlebars-v4.0.5.js"></script>
     <script src="js/article.js"></script>
-    <!-- <script src="js/blog.js"></script> -->
+    <script src="js/blog.js"></script>
     <script src="js/new.js"></script>
 
   </head>
@@ -27,7 +27,7 @@
     </header>
 
     <nav>
-        <a id="new">New</a> |
+        <a id="stats" href="stats.html">Stats</a> |
         <a id="about" href="#tab2">About</a>
     </nav>
 
@@ -60,6 +60,10 @@
         When finalized, copy the above JSON, and paste into blogArticle.js
       </label>
     </section>
-    <footer></footer>
+    <footer>
+        <a id="gitHub" href="https://github.com/dlambrecht" target="_blank"></a>
+        <a id="facebook" href="https://www.facebook.com/darcy.lambrecht" target="_blank"></a>
+        <a id="twitter" href="https://twitter.com/DarcyLambrecht" target="_blank"></a>
+    </footer>
   </body>
 </html>
