stats page up and running

--- a/new-post.html
+++ b/new-post.html
@@ -27,7 +27,7 @@
     </header>
 
     <nav>
-        <a id="stats" href="stats.html">Stats</a> |
+        <a id="stats-link" href="stats.html">Stats</a> |
         <a id="about" href="#tab2">About</a>
     </nav>
 
