SQL database functional

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <script      src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js"></script>
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/handlebars-v4.0.5.js"></script>
+    <script src="js/html5sql.js"></script>
+    <script src="js/webdb.js"></script>
     <script src="js/article.js"></script>
     <script src="js/blog.js"></script>
     <script src="js/util.js"></script>
