--- a/stats.html
+++ b/stats.html
@@ -13,22 +13,29 @@
 
   <body>
     <header>
-      <h1 id="blog-title">Darcy's Blog</h1>
+      <section id="byline">
+        <h1>Darcy Lambrecht</h1>
+        <p>Software Developer</p>
+        <div id="social">
+          <a id="gitHub" href="https://github.com/dlambrecht" target="_blank"></a>
+          <a id="facebook" href="https://www.facebook.com/darcy.lambrecht" target="_blank"></a>
+          <a id="twitter" href="https://twitter.com/DarcyLambrecht" target="_blank"></a>
+        </div>
+      </section>
     </header>
     <nav>
         <a id="new" href="new-post.html">New</a> |
-        <a id="about" href="#tab2">About</a>
+        <a id="home" href="index.html">Blog</a>
     </nav>
 
     <main>
+      <h5>Blog Stats:</h5>
       <section id="stats"></section>
     </main>
     <footer>
-      <a id="gitHub" href="https://github.com/dlambrecht" target="_blank"></a>
-      <a id="facebook" href="https://www.facebook.com/darcy.lambrecht" target="_blank"></a>
-      <a id="twitter" href="https://twitter.com/DarcyLambrecht" target="_blank"></a>
+      Copyright  &copy; 2015 Darcy Lambrecht
     </footer>
-    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="vendor/jquery-2.1.4.min.js"></script>
     <script src="js/stats.js"></script>
   </body>
 </html>
