minor tweaks and changes

--- a/new-post.html
+++ b/new-post.html
@@ -13,8 +13,10 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <script src="vendor/jquery-2.1.4.min.js"></script>
+    <script src="vendor/html5sql.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
     <script src="vendor/handlebars-v4.0.5.js"></script>
+    <script src="js/webdb.js"></script>
     <script src="js/article.js"></script>
     <script src="js/blog.js"></script>
     <script src="js/new.js"></script>
