--- a/stats.html
+++ b/stats.html
@@ -23,10 +23,13 @@
         </div>
       </section>
     </header>
-    <nav>
+
+    <section>
+      <nav>
         <a id="new" href="new-post.html">New</a> |
         <a id="home" href="index.html">Blog</a>
-    </nav>
+      </nav>
+    </section>
 
     <main>
       <h5>Blog Stats:</h5>
