--- a/index.html
+++ b/index.html
@@ -3,20 +3,13 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Blog</title>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/layout.css">
     <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet' type='text/css'>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css">
-<script      src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js"></script>
-    <script src="vendor/jquery-2.1.4.min.js"></script>
-    <script src="vendor/handlebars-v4.0.5.js"></script>
-    <script src="vendor/html5sql.js"></script>
-    <script src="js/webdb.js"></script>
-    <script src="js/article.js"></script>
-    <script src="js/blog.js"></script>
+
   </head>
 
   <body>
@@ -25,6 +18,7 @@
 
         <h1>Darcy Lambrecht</h1>
         <p>Software Developer</p>
+
         <div id="social">
           <a id="gitHub" href="https://github.com/dlambrecht" target="_blank"></a>
           <a id="facebook" href="https://www.facebook.com/darcy.lambrecht" target="_blank"></a>
@@ -33,10 +27,10 @@
 
       </section>
     </header>
-      <nav>
-          <a id="home" href="#tab1">Home</a> |
-          <a id="about" href="#tab2">About</a>
 
+      <nav>
+          <a href="/">Home</a> |
+          <a href="/about">About</a>
       </nav>
 
       <section id="articles" class="tab-content active">
@@ -44,6 +38,7 @@
             <select id="author">
               <option id="author-filter">filter by author</option>
             </select>
+
             <select id="category">
               <option id="category-filter">filter by category</option>
             </select>
@@ -59,7 +54,29 @@
         </section>
     <footer>
       Copyright  &copy; 2015 Darcy Lambrecht
-
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
+
+<script      src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js"></script>
+ <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
+    <script src="vendor/jquery-2.1.4.min.js"></script>
+    <script src="vendor/handlebars-v4.0.5.js"></script>
+    <script src="vendor/html5sql.js"></script>
+    <!-- <script src="vendor/page.js"></script> -->
+    <script src="js/webdb.js"></script>
+
+    <script src="js/article.js"></script>
+    <!-- <script src="js/blog.js"></script> -->
+
+    <script src="js/articleView.js"></script>
+
+    <script src="js/articleController.js"></script>
+    <!-- <script src="js/aboutController.js"></script> -->
+
+    <script src="js/router.js"></script>
+
+
+
   </body>
 </html>
