about view and repo controllers

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Blog</title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/skeleton.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/layout.css">
     <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet' type='text/css'>
 
   </head>
@@ -49,7 +49,7 @@
 
         <section id="aboutContent" class="tab-content">
           <div>
-            <p>Espresso and et, trifecta wings, and lungo, seasonal, dark eu medium, eu a mug americano half and half frappuccino single shot. Cinnamon ristretto saucer barista, caramelization, mug, extraction affogato, crema et caramelization, instant, irish whipped steamed grinder aromatic filter eu filter. Café au lait instant, cortado extra, rich instant milk caramelization, extra acerbic dripper brewed single origin body. Barista, bar frappuccino froth pumpkin spice, instant acerbic aftertaste doppio, americano seasonal java decaffeinated mug black est arabica trifecta. Viennese single origin wings, cup aftertaste in, qui steamed, con panna, acerbic roast mazagran crema half and half cortado so to go. Lungo whipped cappuccino, milk barista et, acerbic beans, steamed ristretto, steamed and macchiato so grinder est foam.</p>
+            <p>GitHub Repos</p>
           </div>
         </section>
     <footer>
@@ -60,21 +60,24 @@
 
 <script      src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js"></script>
  <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
-    <script src="vendor/jquery-2.1.4.min.js"></script>
-    <script src="vendor/handlebars-v4.0.5.js"></script>
-    <script src="vendor/html5sql.js"></script>
-    <!-- <script src="vendor/page.js"></script> -->
-    <script src="js/webdb.js"></script>
+    <script src="/vendor/jquery-2.1.4.min.js"></script>
+    <script src="/vendor/handlebars-v4.0.5.js"></script>
+    <script src="/vendor/html5sql.js"></script>
 
-    <script src="js/article.js"></script>
-    <!-- <script src="js/blog.js"></script> -->
+    <script src="/js/webdb.js"></script>
+    <script src="/js/githubToken.js"></script>
+    <!-- <script src="/js/blog.js"></script> -->
+    <script src="/js/article.js"></script>
+    <script src="/js/repo.js"></script>
 
-    <script src="js/articleView.js"></script>
 
-    <script src="js/articleController.js"></script>
-    <!-- <script src="js/aboutController.js"></script> -->
+    <script src="/js/articleView.js"></script>
+    <script src="/js/aboutView.js"></script>
 
-    <script src="js/router.js"></script>
+    <script src="/js/articleController.js"></script>
+    <script src="/js/reposController.js"></script>
+
+    <script src="/js/router.js"></script>
 
 
 
