--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <script src="/vendor/html5sql.js"></script>
 
     <script src="/js/webdb.js"></script>
-    <script src="/js/githubToken.js"></script>
+    <!-- <script src="/js/githubToken.js"></script> -->
     <!-- <script src="/js/blog.js"></script> -->
     <script src="/js/article.js"></script>
     <script src="/js/repo.js"></script>
