category and author filters working with the browsers back/forward buttons

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
     <script      src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js"></script>
     <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.js"></script>
     <script src="/vendor/jquery-2.1.4.min.js"></script>
     <script src="/vendor/handlebars-v4.0.5.js"></script>
     <script src="/vendor/html5sql.js"></script>
